--- a/public/adminn/pages/layout-fixed-header.html
+++ b/public/adminn/pages/layout-fixed-header.html
@@ -42,10 +42,10 @@
         <div class="nav-header">
             <div class="brand-logo">
                 <a href="index.html">
-                    <b class="logo-abbr"><img src="images/logo.png" alt=""> </b>
-                    <span class="logo-compact"><img src="./images/logo-compact.png" alt=""></span>
+                    <b class="logo-abbr"><img src="{{ asset('admin') }}/images/logo.png" alt=""> </b>
+                    <span class="logo-compact"><img src="{{ asset('admin') }}/images/logo-compact.png" alt=""></span>
                     <span class="brand-title">
-                        <img src="images/logo-text.png" alt="">
+                        <img src="{{ asset('admin') }}/images/logo-text.png" alt="">
                     </span>
                 </a>
             </div>
